fix tiny articleblock not showing background animation

--- a/magazine/src/app/globals.css
+++ b/magazine/src/app/globals.css
@@ -1333,7 +1333,6 @@ a {
   font-size: 20px;
   line-height: 1.35;
   margin-bottom: 10px;
-  transition:color .15s
 }
 
 .ArticleBlock.tiny .text .intro {
